[gd_scene load_steps=6 format=3 uid="uid://c83v780m3vnan"]

[ext_resource type="Script" uid="uid://di7pa4jlm7lvh" path="res://elements/letterboxed_viewport.gd" id="1_goehh"]
[ext_resource type="Texture2D" uid="uid://6caabnjpweep" path="res://sprites/letterbox_stripes.png" id="2_xbe4t"]
[ext_resource type="Shader" uid="uid://c8apcx4xnjev4" path="res://elements/pixel_scaling_shader.gdshader" id="3_x4ctm"]

[sub_resource type="ViewportTexture" id="ViewportTexture_fejjy"]
viewport_path = NodePath("StretchedViewport/LetterboxInner")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xatxe"]
resource_local_to_scene = true
shader = ExtResource("3_x4ctm")
shader_parameter/scaled_subviewport = SubResource("ViewportTexture_fejjy")

[node name="LetterboxedViewport" type="Node2D"]
process_mode = 3
script = ExtResource("1_goehh")

[node name="Letterbox" type="Polygon2D" parent="."]
texture_repeat = 2
position = Vector2(-3840, -2880)
scale = Vector2(120, 90)
texture = ExtResource("2_xbe4t")
texture_scale = Vector2(120, 90)
polygon = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)

[node name="StretchedViewport" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_xatxe")
scale = Vector2(500, 500)
polygon = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)
uv = PackedVector2Array(0, 0, 1, 0, 1, 1, 0, 1)

[node name="LetterboxInner" type="SubViewport" parent="StretchedViewport"]
process_mode = 1
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(100, 100)
render_target_update_mode = 4
